--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,12 @@
 :root {
   font-family: "Montserrat" ,Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #FFFFFF;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1 {
